--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>my Sketch</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script type="text/javascript" src="js/sketch.js"></script>
 </head>
 
